--- a/public/home.html
+++ b/public/home.html
@@ -40,12 +40,16 @@
 <div class="container" style="margin-top:55px;background:lightblue;">
   <!-- <div class="container10" style="float:justify;margin-top:15px;text-align:center;"> -->
   <div id="container1" style="margin-top:5px;">
-<div class="" style="width:100px;height:100px;text-align: center;">
+<!-- <div class="" style="width:100px;height:100px;text-align: center;"> -->
   <!-- <p class="mypara">Keep Playing, Get them all</p> -->
+  <div class="" style="text-align: center;">
   <p id="mypara" style="font-size:1.7em;font-weight:bold">Game starts...</p>
 </div>
-
-    <div class='' style="width:100px;height:100px">
+<!-- <div class='' style="width:100px;height:100px"> -->
+<div >
+  <button id ='buttonId1'  type="button" class="btn btn-lg btn-primary" onclick="myFunction1()">Try Again</button>
+</div>
+    <div class=''>
       <button id ='buttonId'  type="button" class="btn btn-lg btn-primary" onclick="myFunction()">New Game</button>
     </div>
   </div>
